--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
 		"pthread.h": "c",
 		"unistd.h": "c",
 		"stdio.h": "c",
-		"time.h": "c"
+		"time.h": "c",
+		"philo.h": "c"
 	},
 	"files.exclude": {
 		"**/.git": true,
