--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
 		"unistd.h": "c",
 		"stdio.h": "c",
 		"time.h": "c",
-		"philo.h": "c"
+		"philo.h": "c",
+		"stdlib.h": "c",
+		"string.h": "c"
 	},
 	"files.exclude": {
 		"**/.git": true,
